[package]
name = "intel82599_hal"
version = "0.1.0"
description = "An intralingual Hardware Abstraction Layer for the 10 GbE Intel 82599 NIC."
authors = ["Ramla <ijazramla@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Ramla-I/intel82599-hal"
readme = "README.md"

[dependencies]
volatile = "0.2.7"
bit_field = "0.7.0"
bitflags = "1.0.4"
static_assertions = "1.1.0"

[dependencies.num_enum]
version = "0.5.2"
default-features = false

[patch.crates-io]
### use our own version of volatile which supports zerocopy
volatile = { git = "https://github.com/theseus-os/volatile" }

[lib]
crate-type = ["rlib"] # "lib" does the same thing I think